refactor: objects tree and class hierarchy